--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -77,6 +77,7 @@
     margin: 0;
   }
 
+
   #program-description a {
     margin: 30px 0;
   }
@@ -96,8 +97,17 @@
     min-width: 57%;
   }
 
+  .award-wrapper img {
+      min-width: 350px;
+      max-width: 350px;
+  }
+
   #desktop-footer .icon {
     background-color: white;
+  }
+
+  .icon h4 {
+      color: white;
   }
 
   #desktop-footer h4 {
